Bug 1726807 - Assert on valid wp_viewport values, r=mstange a=RyanVM

Submitting invalid values to the Wayland compositor will trigger a
protocol error, which in turn will trigger an unhandled crash.
In order to create crash reports in such cases, assert on valid
values in such cases.

In the long run we can replace this with a general Wayland protocol
error handler.

Differential Revision: https://phabricator.services.mozilla.com/D123286