gfx/layers/NativeLayerWayland.cpp
@@ -683,6 +683,11 @@ void NativeLayerWayland::SetViewportSourceRect(const Rect aSourceRect) {
   }
 
   mViewportSourceRect = aSourceRect;
+  MOZ_RELEASE_ASSERT(
+      (mViewportSourceRect.x >= 0 && mViewportSourceRect.y >= 0 &&
+       mViewportSourceRect.width > 0 && mViewportSourceRect.height > 0) ||
+      (mViewportSourceRect.x == -1 && mViewportSourceRect.y == -1 &&
+       mViewportSourceRect.width == -1 && mViewportSourceRect.height == -1));
   wp_viewport_set_source(mViewport, wl_fixed_from_double(mViewportSourceRect.x),
                          wl_fixed_from_double(mViewportSourceRect.y),
                          wl_fixed_from_double(mViewportSourceRect.width),
@@ -699,6 +704,10 @@ void NativeLayerWayland::SetViewportDestinationSize(int aWidth, int aHeight) {
 
   mViewportDestinationSize.width = aWidth;
   mViewportDestinationSize.height = aHeight;
+  MOZ_RELEASE_ASSERT((mViewportDestinationSize.width > 0 &&
+                      mViewportDestinationSize.height > 0) ||
+                     (mViewportDestinationSize.width == -1 &&
+                      mViewportDestinationSize.height == -1));
   wp_viewport_set_destination(mViewport, mViewportDestinationSize.width,
                               mViewportDestinationSize.height);
 }
